--- a/backend/package.json
+++ b/backend/package.json
@@ -22,13 +22,18 @@
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "^5.9.0",
+    "@types/passport": "^1.0.17",
+    "@types/passport-google-oauth20": "^2.0.16",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "googleapis": "^154.1.0",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "prisma": "^5.9.0",
     "zod": "^3.22.4"
   },
