--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "^5.9.0",
+    "@types/node-cron": "^3.0.11",
     "@types/passport": "^1.0.17",
     "@types/passport-google-oauth20": "^2.0.16",
     "bcrypt": "^5.1.1",
@@ -32,6 +33,7 @@
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "node-cron": "^4.2.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "prisma": "^5.9.0",
