--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.1",
     "framer-motion": "^12.23.9",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.400.0",
     "next": "^15.4.3",
+    "node-cron": "^4.2.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwind-merge": "^2.6.0",
